--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
     "env",
     "react"
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "transform-es2015-destructuring",
+    "transform-object-rest-spread"
+  ]
 }
